syntax = "proto3";

option csharp_namespace = "GrpcServerSide";

package greet;

// The greeting service definition.
//service Greeter {
  // Sends a greeting
  //rpc SayHello (HelloRequest) returns (HelloReply);
//}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

service GreeterServicDefinition{
	rpc Unary(HelloRequest) returns (HelloReply);
	rpc ClientStream(stream HelloRequest) returns(HelloReply);
	rpc ServerStream(HelloRequest) returns(stream HelloReply);
	rpc BiDirectionalStream(stream HelloRequest) returns(stream HelloReply);
}
